# Snake_Game

./: .gitignore  CMakeLists.txt  KnownIssues.md  Makefile  README.md  Todo.md  compile_commands.json
include/: Bonus.hpp  CharScreen.hpp  Entity.hpp  Food.hpp  Fruit.hpp  Game.hpp  Rock.hpp  Snake.hpp  SnakeBody.hpp  SpriteSheet.hpp  Utils.hpp
src/: Bonus.cpp  CharScreen.cpp  Entity.cpp  Food.cpp  Fruit.cpp  Game.cpp  Rock.cpp  Snake.cpp  SnakeBody.cpp  SpriteSheet.cpp  main.cpp
